spade-tests/src/snapshots/spade_tests__parser__greek_semi_error.snap
---
source: spade-tests/src/parser.rs
---
fn top() -> bool {
    let a = 1;
    true
}


error: Expected `;`, got a greek question mark (;)
  ┌─ testinput:2:14
  │
2 │     let a = 1;
  │              ^
  │
  = help: The greek question mark (;) looks similar to the normal `;` character

error: Output type mismatch. Expected bool, got ()
  ┌─ testinput:1:18
  │  
1 │   fn top() -> bool {
  │               ---- bool type specified here
  │ ╭──────────────────^
2 │ │     let a = 1;
3 │ │     true
4 │ │ }
  │ ╰─^ Found type ()
  │  
  = note: Expected: bool
               Got: ()
